# wynd-lume-svelte

backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json  vite.config.ts
frontend/src/: App.svelte
scripts/: dev.sh  start.sh
