[package]

# When you change the name of package to something else, you will also need to change the name in 
# the build, dev and start scripts so it's better for you to search for the default name of package 
# globaly in your editor and replace it with your package name.

name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
wynd = "*"
lume = "*"
dotenv = "0.15.0"
paste = "1.0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }